fix: updated handler role.go
